<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80F4F1F1"
    android:backgroundTint="#FFFFFF"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80F4F1F1"
        tools:context=".ui.add.AddMeetingActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/add_meeting_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:clickable="true"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:title="Add Meeting"
                app:titleTextColor="@color/white">

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/meeting_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="Meeting name"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:helperText="Enter meeting name"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:startIconDrawable="@drawable/ic_baseline_drive_file_rename_outline_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meeting_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_dropdown_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Room"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:endIconMode="dropdown_menu"
            app:helperText="Choose a room"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meeting_name"
            app:startIconDrawable="@drawable/ic_baseline_room_preferences_24">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/dropdown_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:inputType="none">

            </androidx.appcompat.widget.AppCompatAutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/date_setter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="Enter Date"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_dropdown_menu" />


        <EditText
            android:id="@+id/start_time_setter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="Choose start time"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_setter" />

        <EditText
            android:id="@+id/end_time_setter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="Choose end time"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_setter" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="#FFFFFF"
            app:boxBackgroundMode="outline"
            app:helperText="Enter participants email"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_time_setter"
            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_mail_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="256dp"
            android:layout_marginTop="0dp"
            android:outlineAmbientShadowColor="@color/black"
            android:text="Add email"
            android:textSize="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input">

        </Button>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/add_meeting_chipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_mail_button"
            app:singleSelection="true" />


        <Button
            android:id="@+id/create"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:enabled="true"
            android:text="Save"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_meeting_chipGroup" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>



