<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.chip.Chip
    android:id="@+id/mail_chip_model"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.MaterialComponents.Chip.Action"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="12sp"
    android:textColor="@color/black"
    android:theme="@style/Theme.MaterialComponents.Light"
    android:text="Chip Action">

</com.google.android.material.chip.Chip>