...
                app:showAsAction="never">

                <menu>

                    <item
                        android:id="@+id/peach"
                        android:title="Peach"
                        app:showAsAction="never">

                    </item>

                    <item
                        android:id="@+id/mario"
...
